# LinAlg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
haskell/: Bvls.hs
haskell/LinAlg/: Bvls.hs
include/: bvls.h  qr_lls.h
src/: bvls.c  qr_lls.c
test/: test_bvls.cpp
